[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hcpdiffpy"
authors = [
    {name = "Jianxiao Wu", email = "j.wu@fz-juelich.de"}
]
description = "A Python implementation of HCP Pipeline for diffusion preprocessing"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
keywords = ["neuroimaging", "diffusion", "preprocessing", "hcp"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Neuroimaging :: Preprcessing",
]
dependencies = [
    "pandas ~= 2.1.4",
    "nipype @ git+https://github.com/nipy/nipype.git@b4cc4db4152e2ec60ee9c6fe922d90560211a4ed",
    "numpy ~= 1.26.0",
    "datalad ~= 0.19.0",
    "nibabel ~= 5.2.0",
]
dynamic = ["version"]

[project.scripts]
hcpdiffpy = "hcpdiffpy.main:main"

[project.urls]
repository = "https://github.com/jadecci/hcp_pipeline_diffusion_py"
repository-gin = "https://gin.g-node.org/jadecci/hcp_pipeline_diffusion_py"

[tool.setuptools]
packages = ["hcpdiffpy"]

[tool.setuptools.dynamic]
version = {attr = "hcpdiffpy.VERSION"}
